--- a/Ciallo/imgui.ini
+++ b/Ciallo/imgui.ini
@@ -4,13 +4,13 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=1214,0
-Size=1346,1334
+Pos=1739,0
+Size=821,1334
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Dear ImGui Metrics/Debugger]
-Pos=1922,335
+Pos=1500,302
 Size=680,578
 Collapsed=0
 
@@ -19,8 +19,8 @@ Size=2560,1334
 Collapsed=0
 
 [Window][ImPlot Demo]
-Pos=0,0
-Size=1212,1334
+Pos=1279,0
+Size=458,1334
 Collapsed=0
 DockId=0x00000004,0
 
@@ -30,10 +30,10 @@ Size=2560,1334
 Collapsed=0
 
 [Window][Canvas Panel]
-Pos=370,69
-Size=1657,1268
+Pos=576,529
+Size=568,619
 Collapsed=0
-DockId=0x00000003,0
+DockId=0x00000001,1
 
 [Window][Dear ImGui Debug Log]
 Pos=60,60
@@ -41,16 +41,62 @@ Size=806,234
 Collapsed=0
 
 [Window][Toolbox]
-Pos=81,69
-Size=287,1268
+Pos=0,0
+Size=1277,1334
 Collapsed=0
 DockId=0x00000002,0
 
+[Window][LayerManager]
+Pos=576,529
+Size=568,619
+Collapsed=0
+DockId=0x00000001,0
+
+[Window][Dear ImGui Style Editor]
+Pos=1474,137
+Size=478,1142
+Collapsed=0
+
+[Window][Example: Simple layout]
+Pos=87,229
+Size=500,440
+Collapsed=0
+
+[Window][Example: Auto-resizing window]
+Pos=60,60
+Size=762,473
+Collapsed=0
+
+[Window][Example: Constrained Resize]
+Pos=60,60
+Size=859,584
+Collapsed=0
+
+[Window][Same title as another window##2]
+Pos=100,200
+Size=668,79
+Collapsed=0
+
+[Window][###AnimatedTitle]
+Pos=100,304
+Size=363,56
+Collapsed=0
+
+[Window][Same title as another window##1]
+Pos=330,139
+Size=668,79
+Collapsed=0
+
+[Window][Example: Log]
+Pos=431,188
+Size=500,400
+Collapsed=0
+
 [Docking][Data]
-DockNode    ID=0x00000001 Pos=81,69 Size=1946,1268 Split=X
-  DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=287,1200 Selected=0x0339283F
-  DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=1657,1200 Selected=0xCF16F3E9
-DockSpace   ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=2560,1334 Split=X
-  DockNode  ID=0x00000004 Parent=0x8B93E3BD SizeRef=32,1334 CentralNode=1 Selected=0xB903C8C9
-  DockNode  ID=0x00000005 Parent=0x8B93E3BD SizeRef=1346,1334 Selected=0xE87781F4
+DockNode      ID=0x00000001 Pos=576,529 Size=568,619 Selected=0x97178C93
+DockSpace     ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=2560,1334 Split=X
+  DockNode    ID=0x00000002 Parent=0x8B93E3BD SizeRef=1277,1334 Selected=0x0339283F
+  DockNode    ID=0x00000003 Parent=0x8B93E3BD SizeRef=1281,1334 Split=X
+    DockNode  ID=0x00000004 Parent=0x00000003 SizeRef=458,1334 CentralNode=1 Selected=0xB903C8C9
+    DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=821,1334 Selected=0xE87781F4
 
