great reworking with entity component

--- a/Ciallo/Ciallo.vcxproj
+++ b/Ciallo/Ciallo.vcxproj
@@ -89,7 +89,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="AirBrush.cpp" />
+    <ClCompile Include="AirBrushData.cpp" />
     <ClCompile Include="Application.cpp" />
     <ClCompile Include="ArrangementManager.cpp" />
     <ClCompile Include="ArticulatedLineEngine.cpp" />
@@ -121,14 +121,15 @@
     <ClCompile Include="RenderableTexture.cpp" />
     <ClCompile Include="RenderingSystem.cpp" />
     <ClCompile Include="ShaderUtilities.cpp" />
-    <ClCompile Include="StampBrush.cpp" />
+    <ClCompile Include="StampBrushData.cpp" />
     <ClCompile Include="Stroke.cpp" />
     <ClCompile Include="TextureManager.cpp" />
     <ClCompile Include="Tool.cpp" />
+    <ClCompile Include="Viewport.cpp" />
     <ClCompile Include="Window.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="AirBrush.h" />
+    <ClInclude Include="AirBrushData.h" />
     <ClInclude Include="Application.h" />
     <ClInclude Include="Arrangement.h" />
     <ClInclude Include="ArrangementManager.h" />
@@ -148,8 +149,9 @@
     <ClInclude Include="LayerManager.h" />
     <ClInclude Include="Registry.h" />
     <ClInclude Include="RenderableTexture.h" />
-    <ClInclude Include="StampBrush.h" />
+    <ClInclude Include="StampBrushData.h" />
     <ClInclude Include="TextureManager.h" />
+    <ClInclude Include="Viewport.h" />
     <ClInclude Include="Visiblity.h" />
     <ClInclude Include="PaintTool.h" />
     <ClInclude Include="pch.hpp" />
