--- a/Ciallo/imgui.ini
+++ b/Ciallo/imgui.ini
@@ -19,8 +19,8 @@ Size=2560,1334
 Collapsed=0
 
 [Window][ImPlot Demo]
-Pos=1279,0
-Size=458,1334
+Pos=269,0
+Size=1468,1334
 Collapsed=0
 DockId=0x00000004,0
 
@@ -42,12 +42,12 @@ Collapsed=0
 
 [Window][Toolbox]
 Pos=0,0
-Size=1277,1334
+Size=267,1334
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][LayerManager]
-Pos=576,529
+Pos=498,465
 Size=568,619
 Collapsed=0
 DockId=0x00000001,0
@@ -92,11 +92,26 @@ Pos=431,188
 Size=500,400
 Collapsed=0
 
+[Window][Canvas]
+Pos=382,46
+Size=1821,1229
+Collapsed=0
+
+[Window][Tools]
+Pos=60,60
+Size=215,508
+Collapsed=0
+
+[Window][Brush Preview]
+Pos=126,158
+Size=844,1076
+Collapsed=0
+
 [Docking][Data]
-DockNode      ID=0x00000001 Pos=576,529 Size=568,619 Selected=0x97178C93
+DockNode      ID=0x00000001 Pos=498,465 Size=568,619 Selected=0x97178C93
 DockSpace     ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=2560,1334 Split=X
-  DockNode    ID=0x00000002 Parent=0x8B93E3BD SizeRef=1277,1334 Selected=0x0339283F
-  DockNode    ID=0x00000003 Parent=0x8B93E3BD SizeRef=1281,1334 Split=X
-    DockNode  ID=0x00000004 Parent=0x00000003 SizeRef=458,1334 CentralNode=1 Selected=0xB903C8C9
+  DockNode    ID=0x00000002 Parent=0x8B93E3BD SizeRef=267,1334 Selected=0x0339283F
+  DockNode    ID=0x00000003 Parent=0x8B93E3BD SizeRef=2291,1334 Split=X
+    DockNode  ID=0x00000004 Parent=0x00000003 SizeRef=1468,1334 CentralNode=1 Selected=0xB903C8C9
     DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=821,1334 Selected=0xE87781F4
 
