--- a/Ciallo/imgui.ini
+++ b/Ciallo/imgui.ini
@@ -4,13 +4,13 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=1739,0
-Size=821,1334
+Pos=1796,0
+Size=764,1334
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Dear ImGui Metrics/Debugger]
-Pos=1500,302
+Pos=1402,265
 Size=680,578
 Collapsed=0
 
@@ -19,10 +19,10 @@ Size=2560,1334
 Collapsed=0
 
 [Window][ImPlot Demo]
-Pos=269,0
-Size=1468,1334
+Pos=298,0
+Size=1496,1334
 Collapsed=0
-DockId=0x00000004,0
+DockId=0x00000002,0
 
 [Window][DockSpaceViewport_11111111]
 Pos=0,0
@@ -42,9 +42,9 @@ Collapsed=0
 
 [Window][Toolbox]
 Pos=0,0
-Size=267,1334
+Size=296,1334
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000003,0
 
 [Window][LayerManager]
 Pos=498,465
@@ -93,9 +93,10 @@ Size=500,400
 Collapsed=0
 
 [Window][Canvas]
-Pos=381,45
-Size=1821,1229
+Pos=298,0
+Size=1496,1334
 Collapsed=0
+DockId=0x00000002,1
 
 [Window][Tools]
 Pos=60,60
@@ -103,15 +104,29 @@ Size=215,508
 Collapsed=0
 
 [Window][Brush Preview]
-Pos=71,209
-Size=844,1076
+Size=364,1334
+Collapsed=0
+DockId=0x00000008,1
+
+[Window][test]
+Pos=1044,269
+Size=556,618
+Collapsed=0
+
+[Window][BrushEditor]
+Pos=919,432
+Size=574,440
 Collapsed=0
 
 [Docking][Data]
-DockNode      ID=0x00000001 Pos=498,465 Size=568,619 Selected=0x97178C93
-DockSpace     ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=2560,1334 Split=X
-  DockNode    ID=0x00000002 Parent=0x8B93E3BD SizeRef=267,1334 Selected=0x0339283F
-  DockNode    ID=0x00000003 Parent=0x8B93E3BD SizeRef=2291,1334 Split=X
-    DockNode  ID=0x00000004 Parent=0x00000003 SizeRef=1468,1334 CentralNode=1 Selected=0xB903C8C9
-    DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=821,1334 Selected=0xE87781F4
+DockNode          ID=0x00000001 Pos=498,465 Size=568,619 Selected=0x97178C93
+DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=2560,1334 Split=X
+  DockNode        ID=0x00000003 Parent=0x8B93E3BD SizeRef=296,1334 Selected=0x0339283F
+  DockNode        ID=0x00000009 Parent=0x8B93E3BD SizeRef=2262,1334 Split=X
+    DockNode      ID=0x00000007 Parent=0x00000009 SizeRef=297,1334 Selected=0x0339283F
+    DockNode      ID=0x00000008 Parent=0x00000009 SizeRef=2261,1334 Split=X
+      DockNode    ID=0x00000004 Parent=0x00000008 SizeRef=1495,0 Split=Y Selected=0xB903C8C9
+        DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=225,402 CentralNode=1 Selected=0x429E880E
+        DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=225,406 Selected=0x0339283F
+      DockNode    ID=0x00000005 Parent=0x00000008 SizeRef=764,1334 Selected=0xE87781F4
 
