--- a/Ciallo/imgui.ini
+++ b/Ciallo/imgui.ini
@@ -19,8 +19,8 @@ Size=2560,1334
 Collapsed=0
 
 [Window][ImPlot Demo]
-Pos=298,0
-Size=1496,1334
+Pos=0,0
+Size=1794,1334
 Collapsed=0
 DockId=0x00000002,0
 
@@ -41,10 +41,9 @@ Size=806,234
 Collapsed=0
 
 [Window][Toolbox]
-Pos=0,0
+Pos=1847,55
 Size=296,1334
 Collapsed=0
-DockId=0x00000003,0
 
 [Window][LayerManager]
 Pos=498,465
@@ -93,8 +92,8 @@ Size=500,400
 Collapsed=0
 
 [Window][Canvas]
-Pos=298,0
-Size=1496,1334
+Pos=0,0
+Size=1794,1334
 Collapsed=0
 DockId=0x00000002,1
 
@@ -114,9 +113,15 @@ Size=556,618
 Collapsed=0
 
 [Window][BrushEditor]
-Pos=919,432
+Pos=901,407
 Size=574,440
 Collapsed=0
+
+[Table][0x306783DE,3]
+RefScale=19.5
+Column 0  Width=75
+Column 1  Width=75
+Column 2  Weight=1.0000
 
 [Docking][Data]
 DockNode          ID=0x00000001 Pos=498,465 Size=568,619 Selected=0x97178C93
