--- a/Ciallo/imgui.ini
+++ b/Ciallo/imgui.ini
@@ -41,8 +41,8 @@ Size=806,234
 Collapsed=0
 
 [Window][Toolbox]
-Pos=1847,55
-Size=296,1334
+Pos=1502,31
+Size=404,1334
 Collapsed=0
 
 [Window][LayerManager]
@@ -124,14 +124,16 @@ Column 1  Width=75
 Column 2  Weight=1.0000
 
 [Docking][Data]
-DockNode          ID=0x00000001 Pos=498,465 Size=568,619 Selected=0x97178C93
-DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=2560,1334 Split=X
-  DockNode        ID=0x00000003 Parent=0x8B93E3BD SizeRef=296,1334 Selected=0x0339283F
-  DockNode        ID=0x00000009 Parent=0x8B93E3BD SizeRef=2262,1334 Split=X
-    DockNode      ID=0x00000007 Parent=0x00000009 SizeRef=297,1334 Selected=0x0339283F
-    DockNode      ID=0x00000008 Parent=0x00000009 SizeRef=2261,1334 Split=X
-      DockNode    ID=0x00000004 Parent=0x00000008 SizeRef=1495,0 Split=Y Selected=0xB903C8C9
-        DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=225,402 CentralNode=1 Selected=0x429E880E
-        DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=225,406 Selected=0x0339283F
-      DockNode    ID=0x00000005 Parent=0x00000008 SizeRef=764,1334 Selected=0xE87781F4
+DockNode            ID=0x00000001 Pos=498,465 Size=568,619 Selected=0x97178C93
+DockSpace           ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=2560,1334 Split=X
+  DockNode          ID=0x0000000A Parent=0x8B93E3BD SizeRef=404,1334 Selected=0x0339283F
+  DockNode          ID=0x0000000B Parent=0x8B93E3BD SizeRef=2154,1334 Split=X
+    DockNode        ID=0x00000003 Parent=0x0000000B SizeRef=296,1334 Selected=0x0339283F
+    DockNode        ID=0x00000009 Parent=0x0000000B SizeRef=2262,1334 Split=X
+      DockNode      ID=0x00000007 Parent=0x00000009 SizeRef=297,1334 Selected=0x0339283F
+      DockNode      ID=0x00000008 Parent=0x00000009 SizeRef=2261,1334 Split=X
+        DockNode    ID=0x00000004 Parent=0x00000008 SizeRef=1495,0 Split=Y Selected=0xB903C8C9
+          DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=225,402 CentralNode=1 Selected=0x429E880E
+          DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=225,406 Selected=0x0339283F
+        DockNode    ID=0x00000005 Parent=0x00000008 SizeRef=764,1334 Selected=0xE87781F4
 
