--- a/Ciallo/imgui.ini
+++ b/Ciallo/imgui.ini
@@ -4,13 +4,13 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=1796,0
-Size=764,1334
+Pos=2002,0
+Size=558,1334
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Dear ImGui Metrics/Debugger]
-Pos=1402,265
+Pos=1695,243
 Size=680,578
 Collapsed=0
 
@@ -19,14 +19,13 @@ Size=2560,1334
 Collapsed=0
 
 [Window][ImPlot Demo]
-Pos=0,0
-Size=1794,1334
+Size=2000,1334
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][DockSpaceViewport_11111111]
 Pos=0,0
-Size=2560,1334
+Size=2560,1406
 Collapsed=0
 
 [Window][Canvas Panel]
@@ -41,8 +40,8 @@ Size=806,234
 Collapsed=0
 
 [Window][Toolbox]
-Pos=1502,31
-Size=404,1334
+Pos=528,369
+Size=428,721
 Collapsed=0
 
 [Window][LayerManager]
@@ -92,10 +91,9 @@ Size=500,400
 Collapsed=0
 
 [Window][Canvas]
-Pos=0,0
-Size=1794,1334
+Pos=1238,143
+Size=1707,1256
 Collapsed=0
-DockId=0x00000002,1
 
 [Window][Tools]
 Pos=60,60
@@ -113,8 +111,8 @@ Size=556,618
 Collapsed=0
 
 [Window][BrushEditor]
-Pos=901,407
-Size=574,440
+Pos=199,675
+Size=774,640
 Collapsed=0
 
 [Table][0x306783DE,3]
@@ -124,16 +122,26 @@ Column 1  Width=75
 Column 2  Weight=1.0000
 
 [Docking][Data]
-DockNode            ID=0x00000001 Pos=498,465 Size=568,619 Selected=0x97178C93
-DockSpace           ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=2560,1334 Split=X
-  DockNode          ID=0x0000000A Parent=0x8B93E3BD SizeRef=404,1334 Selected=0x0339283F
-  DockNode          ID=0x0000000B Parent=0x8B93E3BD SizeRef=2154,1334 Split=X
-    DockNode        ID=0x00000003 Parent=0x0000000B SizeRef=296,1334 Selected=0x0339283F
-    DockNode        ID=0x00000009 Parent=0x0000000B SizeRef=2262,1334 Split=X
-      DockNode      ID=0x00000007 Parent=0x00000009 SizeRef=297,1334 Selected=0x0339283F
-      DockNode      ID=0x00000008 Parent=0x00000009 SizeRef=2261,1334 Split=X
-        DockNode    ID=0x00000004 Parent=0x00000008 SizeRef=1495,0 Split=Y Selected=0xB903C8C9
-          DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=225,402 CentralNode=1 Selected=0x429E880E
-          DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=225,406 Selected=0x0339283F
-        DockNode    ID=0x00000005 Parent=0x00000008 SizeRef=764,1334 Selected=0xE87781F4
+DockNode                      ID=0x00000001 Pos=498,465 Size=568,619 Selected=0x97178C93
+DockSpace                     ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=2560,1406 Split=X
+  DockNode                    ID=0x00000014 Parent=0x8B93E3BD SizeRef=470,1406 Selected=0x0339283F
+  DockNode                    ID=0x00000015 Parent=0x8B93E3BD SizeRef=2088,1406 Split=X
+    DockNode                  ID=0x00000012 Parent=0x00000015 SizeRef=465,1334 Selected=0x0339283F
+    DockNode                  ID=0x00000013 Parent=0x00000015 SizeRef=2093,1334 Split=X
+      DockNode                ID=0x00000010 Parent=0x00000013 SizeRef=426,1334 Selected=0x0339283F
+      DockNode                ID=0x00000011 Parent=0x00000013 SizeRef=2132,1334 Split=X
+        DockNode              ID=0x0000000E Parent=0x00000011 SizeRef=279,1334 Selected=0x0339283F
+        DockNode              ID=0x0000000F Parent=0x00000011 SizeRef=2279,1334 Split=X
+          DockNode            ID=0x0000000C Parent=0x0000000F SizeRef=280,1334 Selected=0x0339283F
+          DockNode            ID=0x0000000D Parent=0x0000000F SizeRef=2278,1334 Split=X
+            DockNode          ID=0x0000000A Parent=0x0000000D SizeRef=404,1334 Selected=0x0339283F
+            DockNode          ID=0x0000000B Parent=0x0000000D SizeRef=2154,1334 Split=X
+              DockNode        ID=0x00000003 Parent=0x0000000B SizeRef=296,1334 Selected=0x0339283F
+              DockNode        ID=0x00000009 Parent=0x0000000B SizeRef=2262,1334 Split=X
+                DockNode      ID=0x00000007 Parent=0x00000009 SizeRef=297,1334 Selected=0x0339283F
+                DockNode      ID=0x00000008 Parent=0x00000009 SizeRef=2261,1334 Split=X
+                  DockNode    ID=0x00000004 Parent=0x00000008 SizeRef=1718,0 Split=Y Selected=0xB903C8C9
+                    DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=225,402 CentralNode=1 Selected=0x429E880E
+                    DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=225,406 Selected=0x0339283F
+                  DockNode    ID=0x00000005 Parent=0x00000008 SizeRef=558,1334 Selected=0xE87781F4
 
