add UI for bezier edit

--- a/Ciallo/imgui.ini
+++ b/Ciallo/imgui.ini
@@ -10,8 +10,8 @@ Collapsed=0
 DockId=0x00000005,0
 
 [Window][Dear ImGui Metrics/Debugger]
-Pos=1695,243
-Size=680,578
+Pos=2150,64
+Size=404,578
 Collapsed=0
 
 [Window][DockSpace Demo]
@@ -40,7 +40,7 @@ Size=806,234
 Collapsed=0
 
 [Window][Toolbox]
-Pos=1100,359
+Pos=1766,323
 Size=359,615
 Collapsed=0
 
@@ -91,9 +91,10 @@ Size=500,400
 Collapsed=0
 
 [Window][Canvas]
-Pos=1020,125
-Size=1707,1256
+Pos=0,0
+Size=2560,1334
 Collapsed=0
+DockId=0x00000002,0
 
 [Window][Tools]
 Pos=60,60
