--- a/Ciallo/Ciallo.vcxproj
+++ b/Ciallo/Ciallo.vcxproj
@@ -123,7 +123,7 @@
     <ClCompile Include="ColorFace.cpp" />
     <ClCompile Include="PolygonEngine.cpp" />
     <ClCompile Include="Polyline.cpp" />
-    <ClCompile Include="PrefixSumPosition.cpp" />
+    <ClCompile Include="ArticulatedLineComp.cpp" />
     <ClCompile Include="Project.cpp" />
     <ClCompile Include="Registry.cpp" />
     <ClCompile Include="RenderableTexture.cpp" />
@@ -175,7 +175,7 @@
     <ClInclude Include="ColorFace.h" />
     <ClInclude Include="PolygonEngine.h" />
     <ClInclude Include="Polyline.h" />
-    <ClInclude Include="PrefixSumPosition.h" />
+    <ClInclude Include="ArticulatedLineComp.h" />
     <ClInclude Include="Project.h" />
     <ClInclude Include="RenderingSystem.h" />
     <ClInclude Include="ShaderUtilities.h" />
